# FastApi-CDK-GithubActions

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
anime_quote_generator_cdk_ci_cd/: anime_quote_generator_cdk_ci_cd_stack.py  anime_quote_generator_service.py
cdk/: cdk_stack.py  service.py
resources/: anime_quote_generator.py  requirements.txt
src/app/: requirements.txt
tests/: test_anime_quote_generator_cdk_ci_cd_stack.py
tests/unit/: test_anime_quote_generator_cdk_ci_cd_stack.py
